--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,7 +14,17 @@ body {
 
 .square {
     background-color: #5B859E;
-    margin: auto auto;
+    /* margin: auto auto; */
+    padding: auto auto;
+}
+
+.game-page-square {
+    background-color: #5B859E;
+    padding: auto auto;
+}
+
+.friend-page-square {
+    background-color: #C4C4C4;
     padding: auto auto;
 }
 
@@ -40,7 +50,68 @@ body {
     color: white;
 }
 
-
 #myBoard {
     margin-top: 1rem;
+}
+
+img {
+    display: block;
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+}
+
+.my-row {
+    margin-bottom: 10px;
+    justify-content: center;
+}
+
+.friend-row {
+    margin-bottom: 30px;
+    justify-content: center;
+
+}
+
+h3 {
+    color: white;
+    background-color: #264553;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 5px;
+}
+
+h2 {
+    border: solid #264553 4px;
+    background-color: #5B859E;
+    color: white;
+}
+
+.bmd-layout-content {
+    height: 100vh;
+}
+
+.navbar input[type=text] {
+    position: fixed;
+    left: auto;
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+
+.navbar .sBtn {
+    float: right;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
 }
